// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Divider snapshot > Divider demo snapshot 0 1`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: row; --spacing: 0; --flex-wrap: nowrap; height: 40px; font-size: 16px;"
  >
    左边
    <div
      class="bui-divider bui-divider-vertical"
      style="margin: 0px 6px;"
    />
    右边
  </div>
</div>
`;

exports[`Divider snapshot > Divider demo snapshot 0 2`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: row; --spacing: 0; --flex-wrap: nowrap; height: 40px; font-size: 16px;"
  >
    左边
    <div
      class="bui-divider bui-divider-vertical bui-divider-vertical-dashed"
      style="margin: 0px 6px;"
    />
    右边
  </div>
</div>
`;

exports[`Divider snapshot > Divider demo snapshot 0 3`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: row; --spacing: 0; --flex-wrap: nowrap; height: 40px; font-size: 16px;"
  >
    左边
    <div
      class="bui-divider bui-divider-vertical"
      style="margin: 0px 6px;"
    />
    右边
  </div>
</div>
`;

exports[`Divider snapshot > Divider demo snapshot 0 4`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; font-size: 16px;"
  >
    上边
    <div
      class="bui-divider bui-divider-horizontal"
    />
    下边
  </div>
</div>
`;

exports[`Divider snapshot > Divider demo snapshot 0 5`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: row; --spacing: 0; --flex-wrap: nowrap; height: 40px; font-size: 16px;"
  >
    左边
    <div
      class="bui-divider bui-divider-vertical"
      style="height: 12px; margin: 0px 6px;"
    />
    右边
  </div>
</div>
`;

exports[`Divider snapshot > Divider demo snapshot 0 6`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; font-size: 16px;"
  >
    上边
    <div
      class="bui-divider bui-divider-horizontal"
      style="width: 100px;"
    />
    下边
  </div>
</div>
`;

exports[`Divider snapshot > Divider demo snapshot 0 7`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; font-size: 16px;"
  >
    上边
    <div
      class="bui-divider bui-divider-horizontal bui-divider-content"
      style="margin: 6px 0px;"
    >
      <span
        class="bui-divider-line"
        style="width: 60px;"
      />
      <span
        class="bui-divider-text"
      >
        我是分割线
      </span>
      <span
        class="bui-divider-line"
        style="width: 60px;"
      />
    </div>
    下边
  </div>
</div>
`;

exports[`Divider snapshot > Divider demo snapshot 0 8`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; font-size: 16px;"
  >
    上边
    <div
      class="bui-divider bui-divider-horizontal"
      style="border-bottom-width: 2px;"
    />
    下边
  </div>
</div>
`;
